fix mobile scrollbar

--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ body {
     color: var(--text-color);
     font-family: 'Cousine', monospace;
     margin: 0;
+    overflow-x: hidden;
 }
 
 :focus {
@@ -17,6 +18,7 @@ body {
 
 ::-webkit-scrollbar {
     width: 5px;
+    height: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -51,7 +53,7 @@ ul {
 
 #wrapper>li {
     position: absolute;
-    max-width: 100vw;
+    max-width: 100%;
     padding: 20px;
 }
 
@@ -109,8 +111,7 @@ ul {
 .taskInput__input {
     grid-area: input;
     margin: 0 auto;
-    max-width: 100vw;
-    width: 500px;
+    width: 100%;
     height: 100px;
     font-size: 16px;
     background-color: transparent;
